[gd_scene load_steps=6 format=3 uid="uid://cnvbwvv0vgevv"]

[ext_resource type="Script" uid="uid://dysgnbqyj5aco" path="res://guns/granade_launcher/granade_launcher_scripts/gun.gd" id="1_afegp"]
[ext_resource type="PackedScene" uid="uid://bqcf5atpundt" path="res://guns/granade_launcher/granade_launcher_scenes/bullet.tscn" id="2_d647a"]
[ext_resource type="PackedScene" uid="uid://ctm3rxwf67x0" path="res://guns/grenade-launcher-model/Grenade Launcher.glb" id="3_frmi6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kw0bs"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_kw0bs"]
properties/0/path = NodePath(".:holder_id")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Gun" type="Node3D" groups=["gun"]]
script = ExtResource("1_afegp")
bullet_scene = ExtResource("2_d647a")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0.14561462, 0.624635, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_kw0bs")

[node name="Grenade Launcher2" parent="." instance=ExtResource("3_frmi6")]
transform = Transform3D(-1.7484556e-08, 0, -0.4, 0, 0.4, 0, 0.4, 0, -1.7484556e-08, 0.3, 0.3, 0)

[node name="Muzzle" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.34816942, 0.57201684, 0)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_kw0bs")

[node name="Cooldown_Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Reload_Timer" type="Timer" parent="."]
wait_time = 0.8

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
